BB-6671: FrontStore > Quick Order > Broken styles all buttons - Fix the issue

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
@@ -127,7 +127,7 @@
   margin: 0 -7px 15px;
 
   @media (max-width: $screen-md) {
-    margin: 0 -5px;
+    margin: 5px -5px;
   }
 
   @include clearfix();
@@ -262,7 +262,8 @@
 
   .widget-content {
     .action-button {
-      background-color: get-color('additional', 'darker');
+      background-color: get-color('additional', 'dark');
+      border-color: get-color('additional', 'dark');
 
       &.btn-inactive {
         background-color: get-color('additional', 'middle');
